# Ant-Multi-Modal-Framework

./: .gitignore  README-CN.md  README.md  README_EN.md  README_en.md
antmmf/: __init__.py  run.py
antmmf/common/: __init__.py  batch_collator.py  (+12 more)
prj/: Project_README.md  README.md
prj/Pink/: README.md  demo.py  inference.ipynb  pyproject.toml
prj/Pink/dataset_generation/: coco_detection.py  object365_detection.py  pointing_vqa_local.py  pointing_vqa_look_twice.py  v7w_pointing.py  v7w_telling.py  visual_genome2vg.py
prj/Pink/pink/: __init__.py  conversation.py
prj/Pink/pink/datasets/: AOKVQA.py  BaseDataset.py  COCOCaption.py  FlickrCaption.py  FlickrEntity.py  GQA.py  LLaVA.py  LLaVACaption.py  OKVQA.py  Object365.py  PointingVQALocal.py  PointingVQALookTwice.py  PretrainCaption.py  ProbMergeDataset.py  Templates.py  V7WGrounding.py  VQAv2.py  VSR.py  VisualGenome.py  VisualGrounding.py  __init__.py
prj/Pink/pink/eval/: eval_gqa.py  eval_pointingvqa_local.py  eval_pointingvqa_looktwice.py  eval_v7wgrounding.py  eval_vg.py  eval_vqav2.py  model_gqa.py  model_iconqa.py  model_object365.py  model_okvqa.py  model_pointingvqa_local.py  model_pointingvqa_looktwice.py  model_seed.py  model_v7wgrounding.py  model_vg_base_batch.py  model_vqav2.py  model_vsr.py  object365_filter.py
prj/Pink/pink/eval/vqa_tools/: vqa.py  vqa_result.py
prj/Pink/pink/model/: __init__.py  adapter.py  eva_vit.py  pink.py  utils.py
prj/Pink/pink/train/: pink_trainer.py  train.py
prj/Pink/scripts/: eval_refcoco.sh  object365_generate.sh  stage1.sh  stage2.sh  stage2_with_object365.sh
(+562 files in other folders)
