[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pink"
version = "0.1.0"
description = "Pink: Unveiling the Power of Referential Comprehension for Multi-modal LLMs"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
]
dependencies = [
    "accelerate", "fastapi", "gradio==3.23", "markdown2[all]", "numpy",
    "requests", "sentencepiece", "tokenizers",
    "torch==2.2.2", "torchvision", "uvicorn", "transformers==4.38.2"
]

[project.urls]
"Homepage" = "https://github.com/SY-Xuan/Pink"
"Bug Tracker" = "https://github.com/SY-Xuan/Pink/issues"

[tool.setuptools.packages.find]
exclude = ["assets*", "benchmark*", "docs", "dist*", "playground*", "scripts*", "tests*"]

[tool.wheel]
exclude = ["assets*", "benchmark*", "docs", "dist*", "playground*", "scripts*", "tests*"]
